Changes for logo
Changes for logo, remove buttons, prevent confirm exit app

--- a/download.html
+++ b/download.html
@@ -236,12 +236,12 @@
                     else if (lstBooks[i] == "7") {
                         imgURL = 'PDF/7.jpg';
                         captionTitle = 'Economics';
-                        downloadButtonHTML = '<button onclick="openVIDEO(\'https://a2.udemycdn.com/2013-01-08_09-02-17-ba289ed428cbfd72d4725da8f238d314/WebHD_720p.mp4?nva=20190808190212&token=0b0163a7eb2838980b53e\')" class="btn btn-success">VIEW VIDEO</button>';
+                        // downloadButtonHTML = '<button onclick="openVIDEO(\'https://a2.udemycdn.com/2013-01-08_09-02-17-ba289ed428cbfd72d4725da8f238d314/WebHD_720p.mp4?nva=20190808190212&token=0b0163a7eb2838980b53e\')" class="btn btn-success">VIEW VIDEO</button>';
                     }
                     else if (lstBooks[i] == "8") {
                         imgURL = 'PDF/8.jpg';
                         captionTitle = 'Physics';
-                        downloadButtonHTML = '<button onclick="openVIDEO(\'https://a2.udemycdn.com/2016-06-05_18-14-59-a6322d1b4977d0f8f1546755badb37b4/WebHD_720p.mp4?nva=20190808193538&token=062cbf485ebf352228850\')" class="btn btn-success">VIEW VIDEO</button>';
+                        // downloadButtonHTML = '<button onclick="openVIDEO(\'https://a2.udemycdn.com/2016-06-05_18-14-59-a6322d1b4977d0f8f1546755badb37b4/WebHD_720p.mp4?nva=20190808193538&token=062cbf485ebf352228850\')" class="btn btn-success">VIEW VIDEO</button>';
                     }
 
                     if (lstBooks[i] != ",") {
