--- a/main.html
+++ b/main.html
@@ -243,10 +243,10 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openPDf('http://www.ddegjust.ac.in/studymaterial/bba/bba-104.pdf')"
-                                                    class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('1')" class="btn btn-primary"> DOWNLOAD
+                                                    class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('1')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -261,10 +261,10 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openPDf('http://www.ddegjust.ac.in/studymaterial/bba/bba-103.pdf')"
-                                                    class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('2')" class="btn btn-primary"> DOWNLOAD
+                                                    class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('2')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -279,10 +279,10 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openPDf('http://www.ddegjust.ac.in/studymaterial/bba/bba-205.pdf')"
-                                                    class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('L')" class="btn btn-primary"> BUY
+                                                    class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('L')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -297,10 +297,10 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openPDf('http://www.ddegjust.ac.in/studymaterial/bba/bba-104.pdf')"
-                                                    class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('L')" class="btn btn-primary"> BUY
+                                                    class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('L')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -318,10 +318,10 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openPDf('http://www.ddegjust.ac.in/studymaterial/bba/bba-203.pdf')"
-                                                    class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('5')" class="btn btn-primary"> DOWNLOAD
+                                                    class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('5')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -336,10 +336,10 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openPDf('http://www.ddegjust.ac.in/studymaterial/bba/bba-104.pdf')"
-                                                    class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('6')" class="btn btn-primary"> DOWNLOAD
+                                                    class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('6')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -357,10 +357,10 @@
                                                 This is a demo video file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openVIDEO('https://a2.udemycdn.com/2013-01-08_09-02-17-ba289ed428cbfd72d4725da8f238d314/WebHD_720p.mp4?nva=20190808190212&token=0b0163a7eb2838980b53e')"
-                                                    class="btn btn-success">VIEW VIDEO</button>
-                                                <button onclick="download('7')" class="btn btn-primary"> DOWNLOAD
+                                                    class="btn btn-success">VIEW VIDEO</button> -->
+                                                <button onclick="download('7')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -375,10 +375,10 @@
                                                 This is a demo video file
                                             </p>
                                             <p>
-                                                <button
+                                                <!-- <button
                                                     onclick="openVIDEO('https://a2.udemycdn.com/2016-06-05_18-14-59-a6322d1b4977d0f8f1546755badb37b4/WebHD_720p.mp4?nva=20190808193538&token=062cbf485ebf352228850')"
-                                                    class="btn btn-success">VIEW VIDEO</button>
-                                                <button onclick="download('8')" class="btn btn-primary"> DOWNLOAD
+                                                    class="btn btn-success">VIEW VIDEO</button> -->
+                                                <button onclick="download('8')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -396,8 +396,8 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button onclick="openPDf()" class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('L')" class="btn btn-primary"> BUY
+                                                <!-- <button onclick="openPDf()" class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('L')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -412,8 +412,8 @@
                                                 This is a demo pdf file
                                             </p>
                                             <p>
-                                                <button onclick="openPDf()" class="btn btn-success">VIEW BOOK</button>
-                                                <button onclick="download('L')" class="btn btn-primary"> BUY
+                                                <!-- <button onclick="openPDf()" class="btn btn-success">VIEW BOOK</button> -->
+                                                <button onclick="download('L')" class="btn btn-success"> BUY
                                                 </button>
                                             </p>
                                         </div>
@@ -454,8 +454,7 @@
         }
 
         function openVIDEO(url) {
-            window.localStorage.setItem("linkURL", url);
-
+            window.localStorage.setItem("linkURL", url); 
             window.location.href = "videoplayer.html";
         }
 
@@ -479,36 +478,27 @@
                 }
                 else {
 
-                }
-
-                lstBooks.push(id);
-
-                lstBooks = uniqueList(lstBooks);
-
-                window.localStorage.setItem("lstBooks", lstBooks);
-
-                //window.localStorage.removeItem("lstBooks");
-
+                } 
+                lstBooks.push(id); 
+                lstBooks = uniqueList(lstBooks); 
+                window.localStorage.setItem("lstBooks", lstBooks); 
                 alert("Books successfully downloaded.");
             }
         }
 
         $(document).ready(function () {
             $('#aAll').click(function (e) {
-                e.preventDefault();
-
+                e.preventDefault(); 
                 window.location.href = "main.html";
             });
 
             $('#aBuy').click(function (e) {
-                e.preventDefault();
-
+                e.preventDefault(); 
                 window.location.href = "main.html";
             });
 
             $('#aSample').click(function (e) {
-                e.preventDefault();
-
+                e.preventDefault(); 
                 window.location.href = "download.html";
             });
 
@@ -519,8 +509,7 @@
             });
 
             $(".clsCategory").click(function () {
-                var categoryID = $(this).data("cid");
-
+                var categoryID = $(this).data("cid"); 
                 if (categoryID == 1) {
                     $(".linkCategory").css("display", "none");
                     $("#linkCategory1").css("display", "block");
