--- a/videoplayer.html
+++ b/videoplayer.html
@@ -69,7 +69,7 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a href="#" id="aLogo"><img src="logo.png" alt="Logo" /></a>
+                <a href="#" class="aLogo"><img src="logo.png" alt="Logo" /></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -77,7 +77,7 @@
                         <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
                     </li>
                     <li>
-                        <a href="#" id="aLogo" data-close="true">
+                        <a href="#" class="aLogo" data-close="true">
                             <i class="material-icons">home</i>
                         </a>
                     </li>
